# MediaProjectionDemo

./: build.gradle  settings.gradle
HiChat/: package-lock.json  package.json  server.js
HiChat/www/: index.html
HiChat/www/scripts/: hichat.js
HiChat/www/styles/: main.css
acresult/: build.gradle
acresult/src/main/java/com/cry/acresult/: ActivityResultRequest.java  ActivityResultRequest.kt  OnActivityResultDispatcherFragment.java  OnActivityResultDispatcherFragment.kt  ResultEvent.kt
app/: build.gradle
app/src/androidTest/java/com/cry/mediaprojectiondemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cry/mediaprojectiondemo/: App.kt  CastService.kt  MainActivity.kt  MediaProjectionSocketActivity.kt  MySocketClient.kt  SocketClient.kt  WelComeActivity.kt
app/src/main/res/layout/: mediaprojection_activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: auto_touch.xml  network_security_config.xml
app/src/test/java/com/cry/mediaprojectiondemo/: ExampleUnitTest.kt
codec/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
rtmp/: build.gradle
rtmp/src/main/cpp/: CMakeLists.txt
screenop/: build.gradle
screenop/src/main/java/com/cry/screenop/: ImageReaderAvailableObservable.kt  MediaProjectionHelper.java  MediaProjectionHelper.kt  (+6 more)
socket/: build.gradle
sockt/: index.js  io-client.js  io-server.js  package-lock.json  package.json  tcp-server.js
sockt/public/: index.html  index.js  screen.png?time=1710445220821
(+23 files in other folders)
